test/sema/tuple-equality.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:12: error: no matching operator '==' with arguments '(int a)' and '(int a)'
    (a: 1) == (a: 1); // TODO: Implement tuple equality comparison
}
